// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render Dashboard 1`] = `
<div>
  <LoadingPage />
</div>
`;

exports[`should correctly render Dashboard 2`] = `
<div>
  <Connect(withAuth(Header)) />
</div>
`;
